Fixed background color collapsed accordion buttons

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -221,6 +221,7 @@ main {
 .accordion-item .accordion-button.collapsed {
   border-bottom-left-radius: .8rem !important;
   border-bottom-right-radius: .8rem !important;
+  background-color: white;
 }
 
 .accordion-item .accordion-collapse {
